-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
None
-
-
d8f7a2ddf4e098786a5dec27e11786f5ff4e0433
When running the standarddialogs example with the GL-based plugin, all the labels and buttons will be scaled up, and their position on screen will not match the touch position, so something is very off.
Update:
This problem can be reproduced with the following example:
#include <QApplication>
#include <QPushButton>
int main(int argc, char *argv[])
{
QApplication app(argc, argv);
QPushButton w("Hello, Qt!");
w.show();
return app.exec();
}
- is required for
-
QTBUG-33863 Issues to be fixed before Qt5.2 RC1 release
-
- Closed
-
- relates to
-
QTBUG-34582 Android: Raster plugin Crashes for Textedit Example
-
- Closed
-
-
QTBUG-39611 Regression/Windows: QWizard buttons wrongly positioned on branch 5.3 after merge from stable (5.3.0 release tags)
-
- Closed
-